fixtures/cs-jwt-04/good/verify-const-options-ignore-expiration-false.ts
import jwt from "jsonwebtoken";

const secret = "secret";
const options = { ignoreExpiration: false };

export function check(token: string) {
	return jwt.verify(token, secret, options);
}
